--- a/src/css/Capabilities.css
+++ b/src/css/Capabilities.css
@@ -1,5 +1,5 @@
 .capabilities {
-  margin-top: 60px;
+  margin-top: 70px;
 }
 .capabilities .container .row .heading {
   display: flex;
@@ -12,15 +12,17 @@
   align-items: center;
 }
 .capabilities .container .row .heading .title .sec-heading {
+  font-size: 26px;
   color: #080c4e;
-  font-weight: 400;
+  font-weight: 350;
   text-transform: uppercase;
+  line-height: 1.6;
 }
 .capabilities .container .row .heading .title .line {
   content: "";
   background: #5c51ff;
   width: 5px;
-  height: 60px;
+  height: 65px;
   display: block;
   margin: 0px 30px;
 }
@@ -41,14 +43,15 @@
 }
 .capabilities .container .row .heading .box .line1 {
   content: "";
-  width: 25px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
+  margin-left: 5px;
   background: #5c51ff;
   display: block;
 }
 .capabilities .container .row .heading .box .line2 {
   content: "";
-  width: 35px;
+  width: 30px;
   height: 30px;
   background: #5c51ff;
   display: block;
@@ -57,7 +60,7 @@
 .capabilities .container .row .sec-card {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 .capabilities .container .row .sec-card .card {
   padding: 30px 15px 10px 15px;
@@ -81,8 +84,8 @@
   color: #8385a6;
 }
 .capabilities .container .row .sec-download {
-  max-height: 300px;
-  margin-top: 100px;
+  max-height: 310px;
+  margin-top: 120px;
   background-color: #faf9fe;
   border-radius: 25px;
   display: flex;
@@ -94,8 +97,9 @@
   margin-top: 30px;
   margin-bottom: 30px;
   font-size: 30px;
-  font-weight: 400;
+  font-weight: 350;
   color: #080c4e;
+  line-height: 1.4;
   text-transform: uppercase;
 }
 .capabilities .container .row .sec-download a {
@@ -110,6 +114,7 @@
 .capabilities .container .row .sec-download .sec-img .img1 img {
   position: relative;
   top: 0px;
+  bottom: 0;
   z-index: 1;
   width: 200px;
   height: 100%;
