--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,12 +1,14 @@
 .main {
   max-width: 1024vh;
+  padding-top: 20px;
 }
 .main .container .row .text-sec h1 {
   margin-top: 80px;
   text-transform: uppercase;
   color: #080c4e;
-  font-size: 55px;
+  font-size: 45px;
   font-weight: 400;
+  line-height: 1.4;
 }
 .main .container .row .text-sec p {
   margin-top: 20px;
@@ -16,12 +18,23 @@
 }
 .main .container .row .img-sec {
   display: flex;
-  justify-content: center;
+  align-items: center;
+}
+/* .main .container .row .img-sec .btn {
+  z-index: 2;
+  margin: 40% -30px 40% 0px;
+  padding: 25px;
+  border-radius: 50%;
+  background-color: #dae3f0;
+  border: none;
+} */
+.main .container .row .img-sec .btn img {
+  width: 20px;
 }
 .main .container .row .img-sec img {
   z-index: 1;
-  width: 90%;
-  height: 90%;
+  width: 440px;
+  height: 500px;
 }
 .main .container .row .text-sec .form form {
   margin-top: 20px;
@@ -29,7 +42,7 @@
   align-items: center;
 }
 .main .container .row .text-sec .input {
-  width: 60%;
+  width: 50%;
 }
 /* .main .container .row .text-sec .input span {
   position: absolute;
@@ -42,13 +55,13 @@
 } */
 .main .container .row .text-sec .form .search {
   background-color: #faf9fe;
-  padding: 18px 22px;
-  font-size: 15px;
+  padding: 14px 18px;
+  font-size: 13px;
   border: none;
   border-radius: 10px;
 }
 .main .container .row .text-sec .form .search-btn {
-  padding: 18px 22px;
+  padding: 14px 18px;
   font-size: 15px;
   border: hidden;
   margin-left: 15px;
@@ -65,14 +78,15 @@
   color: #8385a6;
 }
 .main .container .row .categories {
-  margin-top: -8rem;
-  padding: 50px 80px;
+  margin-top: -60px;
+  padding: 40px 80px;
   border-radius: 25px;
   background-color: #faf9fe;
 }
 .main .container .row .categories h3 {
+  font-size: 26px;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 350;
   color: #080c4e;
 }
 .main .container .row .categories h3::after {
@@ -85,53 +99,53 @@
 }
 .main .container .row .categories .cat-btn {
   display: flex;
-  margin-top: 60px;
+  margin-top: 40px;
   text-align: center;
   text-transform: capitalize;
   justify-content: space-between;
 }
 .main .container .row .categories .cat-btn img {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 .main .container .row .categories .cat-btn .btn1 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #4dccff;
 }
 .main .container .row .categories .cat-btn .btn2 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #ff9156;
 }
 .main .container .row .categories .cat-btn .btn3 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #5f67ec;
 }
 .main .container .row .categories .cat-btn .btn4 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #f67162;
 }
 .main .container .row .categories .cat-btn .btn5 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #55c6aa;
 }
 .main .container .row .categories .cat-btn .btn6 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #6c5778;
 }
 .main .container .row .categories .cat-btn .btn7 {
-  padding: 25px;
+  padding: 20px;
   border-radius: 50%;
   border: none;
   background-color: #fea501;
@@ -139,4 +153,5 @@
 .main .container .row .categories .cat-btn p {
   margin-top: 20px;
   color: #080c4e;
+  font-size: 15px;
 }
